# Setup settings for GRPC Python

[coverage:run]
plugins = Cython.Coverage

[build]
build_base=pyb

[build_ext]
inplace=1

[build_package_protos]
exclude=.*protoc_plugin/protoc_plugin_test\.proto$

[metadata]
license_files = LICENSE

# NOTE(lidiz) Adding examples one by one due to pytype aggressive errer:
# ninja: error: build.ninja:178: multiple rules generate helloworld_pb2.pyi [-w dupbuild=err]
# TODO(sourabhsinghs) : include all packages when merging python/sync/typings to master
[pytype]
inputs =
    src/python/grpcio/grpc/aio
    src/python/grpcio_tests/tests_aio
exclude =
    **/*_pb2.py
    src/python/grpcio/grpc/framework
    src/python/grpcio/grpc/beta
    src/python/grpcio_observability/grpc_observability

# NOTE(lidiz)
# import-error: C extension triggers import-error.
# module-attr: pytype cannot understand the namespace packages by Google.
# attribute-error: Data classes in grpc module doesn't specify attributes.
# pyi-error: pytype couldn't find pyi file for some aio modules
disable = "import-error,module-attr,attribute-error,pyi-error"

[mypy]
cache_dir = /dev/null
# NOTE(sourabhs)
# import: mypy cannot understand the namespace packages by Google.
# name-defined: mypy cannot understand dynamically imported proto and services.
# e.g. grpc.protos_and_services("helloworld.proto")
disable_error_code = 
    import,
    name-defined
files =
    src/python/grpcio/grpc/aio,
    src/python/grpcio_tests/tests_aio
exclude = (?x)(
    _pb2\.py$  # files ending with "_pb2.py"
  )
[mypy-src.python.grpcio_tests.*]
disable_error_code = attr-defined