# Setup settings for GRPC Python

[coverage:run]
plugins = Cython.Coverage

[build]
build_base=pyb

[build_ext]
inplace=1

[build_package_protos]
exclude=.*protoc_plugin/protoc_plugin_test\.proto$

[metadata]
license_files = LICENSE

# NOTE(lidiz) Adding examples one by one due to pytype aggressive errer:
# ninja: error: build.ninja:178: multiple rules generate helloworld_pb2.pyi [-w dupbuild=err]
# TODO(xuanwn): include all files in src/python/grpcio/grpc
[pytype]
inputs =
    src/python/grpcio/grpc/[!abe]*/
exclude =
    **/*_pb2.py

# NOTE(lidiz)
# import-error: C extension triggers import-error.
# module-attr: pytype cannot understand the namespace packages by Google.
# attribute-error: Data classes in grpc module doesn't specify attributes.
disable = "import-error,module-attr,attribute-error"

[mypy]
cache_dir = /dev/null
files =
    src/python/grpcio/grpc/[!abe]*/
exclude = (?x)(
    _pb2\.py$
    examples/python/.*.py$
  )