# Setup settings for GRPC Python

[coverage:run]
# Default core on Python3.14+ has changed to sysmon which doesn't support
# plugins. So force coverage to use the C Tracer to support plugins on
# Python 3.14+
core = ctrace
plugins = Cython.Coverage

[build]
build_base=pyb

[build_ext]
inplace=1

[metadata]
license_files = LICENSE
