bazel_dep(name = "google_cloud_cpp", version = "2.35.0")
archive_override(
    module_name = "google_cloud_cpp",
    sha256 = "81ea28cf9e5bb032d356b0187409f30b1035f8ea5b530675ea248c8a6c0070aa",
    strip_prefix = "google-cloud-cpp-2.35.0",
    urls = [
        "https://storage.googleapis.com/grpc-bazel-mirror/github.com/googleapis/google-cloud-cpp/archive/refs/tags/v2.35.0.tar.gz",
        "https://github.com/googleapis/google-cloud-cpp/archive/refs/tags/v2.35.0.tar.gz",
    ],
)
