load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pkg.go"],
    importpath = "github.com/envoyproxy/protoc-gen-validate/templates",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/cc:go_default_library",
        "//templates/go:go_default_library",
        "//templates/java:go_default_library",
        "//templates/shared:go_default_library",
        "@com_github_lyft_protoc_gen_star//:go_default_library",
        "@com_github_lyft_protoc_gen_star//lang/go:go_default_library",
    ],
)
